force-app/main/default/objects/Implementation_Playbook_Rule__mdt/Implementation_Playbook_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Maps an (implementation package, segment) tuple to the Action Plan template + owner group that should run for the resulting Contract. Read by the onboarding Action Plan flow to choose the right template.</description>
    <label>Implementation Playbook Rule</label>
    <pluralLabel>Implementation Playbook Rules</pluralLabel>
</CustomObject>