force-app/main/default/objects/Implementation_Playbook_Rule__mdt/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <description
  >Name of the ActionPlanTemplate__c record to spawn (seeds the templates). The onboarding flow passes this value to ActionPlanCreateInvocable.templateNameOrId.</description>
    <inlineHelpText
  >Name of the Action Plan template to instantiate.</inlineHelpText>
    <label>Action Plan Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>