force-app/main/default/objects/Implementation_Playbook_Rule__mdt/fields/Implementation_Package__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Package__c</fullName>
    <description>Implementation package this playbook rule applies to. Inline value set duplicating Northstar_Implementation_Package GVS (GVS not supported on MDT).</description>
    <inlineHelpText>Implementation package this rule applies to.</inlineHelpText>
    <label>Implementation Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Quickstart</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Custom Statement of Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>