force-app/main/default/objects/Implementation_Playbook_Rule__mdt/fields/Owner_Group__c.field-meta.xml
<CustomField>
    <fullName>Owner_Group__c</fullName>
    <description
  >DeveloperName of the public group (e.g. Implementation_Managers) whose members will be candidate owners of the Action Plan's tasks. The flow resolves to a specific user via round-robin on the group's members.</description>
    <inlineHelpText
  >DeveloperName of the public group owning generated tasks.</inlineHelpText>
    <label>Owner Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>