force-app/main/default/objects/Implementation_Playbook_Rule__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Customer segment narrowing the playbook rule. Leave blank to apply to any segment for the given Implementation Package. Inline value set duplicating Northstar_Customer_Segment GVS (GVS not supported on MDT).</description>
    <inlineHelpText>Segment narrowing this rule. Blank = any segment.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Partner Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>